* #2037989: Registration notification sent twice (real_therplima)
* bug with modules when calling editors. (stranger)
* bug "Cannot redeclare class XoopsFormCaptcha". (stranger)
* Language constants in IcmsModuleAbout feature (malanciault)
* bug with pdf generator. (stranger)
* bug Hidencontent doesn`t work with TinyMCE. (stranger)
* # 2090834: Customtag works not with TinyMCE (malanciault)
* # 2046097: RSS admin news no longer works  (malanciault)
* # 2046097: Upgrade script modified to update rss_local config with correct info (if value was not previously changed by user) (malanciault)
* #1969061: _AUTH_MSG_AUTH_METHOD = xoops. This message was not saying much to users so the word 'xoops' was changed to 'standard' login (malanciault)
* #1984939: Creating a new CustomTag: Undefined offset: 0 in file /kernel/icmspersistableobjecthandler.php line 262 (malanciault)
* #1984939: Creating a new CustomTag: Undefined variable: groups_value in file /class/icmsform/icmsform.php line 270 (malanciault)
* #2096670: Changed field types for meta_description and meta_keywords to only allow plain text
* Notice: Undefined variable: openid in file /modules/system/admin/users/main.php line 61. (stranger/malanciault)

===2008-08-08 : 1.1 Beta 1===

'''Added'''
* new plugin for tinymce. hiddencontent (luciorota/real_therplima/stranger)
* Password meter op on installation. (stranger/real_therplima)
* Upgrade script 1.0 --> 1.1beta. (stranger)
* new field to let user select if they want to sho their openid. (stranger)
* new warning to let users know about upgrading system module. (stranger)
* new warning to search if trust_path is defined. (stranger)
* new warning to let users know about protector with credits to GIJOE. (stranger)
* Upgrade script XOOPS2.2.x --> ImpressCMS. (stranger/phppp)
* function "_filterImgUrl" to module.sanitizer, to keep compatibility with D3 modules.. (stranger/minahito/hodaka)
* added 3 content alignments for dhtml text editor. (stranger)