@@ -29,7 +29,8 @@ ImpressCMS ChangeLog
 * Language constants in IcmsModuleAbout feature (malanciault)
 * bug with pdf generator. (stranger)
 * bug Hidencontent doesn`t work with TinyMCE. (stranger)
-* # 2090834: Customtag works not with TinyMCE (malanciault)
+* # 2090834: Customtag works not with TinyMCE and Custom HTML Blocks (malanciault)
+* # 2090834: Customtag works not with TinyMCE and Content Manager (malanciault)
 * # 2046097: RSS admin news no longer works  (malanciault)
 * # 2046097: Upgrade script modified to update rss_local config with correct info (if value was not previously changed by user) (malanciault)
 * #1969061: _AUTH_MSG_AUTH_METHOD = xoops. This message was not saying much to users so the word 'xoops' was changed to 'standard' login (malanciault)
